Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
   <!-- MENU -->
   <div class="card hidden" id="menu">
-    <h1>Para ti ❤️</h1>
+    <h1>Para el amor de mi vida ❤️</h1>
     <div class="menu">
       <button onclick="show('letter')">💌 Carta</button>
       <button onclick="show('photos')">📸 Álbum</button>
@@ -242,3 +242,4 @@
 
 </body>
 </html>
+
